<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/baby_sitter_scren"
    tools:context=".views.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:id="@+id/username_log"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enterUsername"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:letterSpacing="0.15"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/password_log"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enterPassword"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:letterSpacing="0.15"/>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_button"
                android:text="@string/login"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorSecondary"
                app:cornerRadius = "20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"
                android:text="@string/or" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/register_button"
                android:text="@string/register"
                android:textSize="15sp"
                android:backgroundTint="@color/colorSecondary"
                app:cornerRadius = "20dp" />



                


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>