<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.UpdateActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/add_image2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/baseline_add_black"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/add_title2"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enterItem"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:letterSpacing="0.15"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/add_quantity2"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enterQuantity"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:letterSpacing="0.15"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/add_location2"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enterLocation"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:letterSpacing="0.15"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/update_item"
                android:text="@string/update"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/delete_item"
                android:text="@string/delete"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:background="@drawable/rounded_delete_button"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>