<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/mainItemLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/item_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/item_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/vector_image"
                app:layout_constraintTop_toTopOf="@id/vector_image" />

            <TextView
                android:id="@+id/quantity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/item_txt"
                app:layout_constraintTop_toBottomOf="@id/item_txt" />

            <TextView
                android:id="@+id/location_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/quantity_txt"
                app:layout_constraintTop_toBottomOf="@id/quantity_txt" />

            <Button
                android:id="@+id/sms_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_button"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/sendSMS"
                app:layout_constraintEnd_toEndOf="@id/done_check"
                app:layout_constraintTop_toBottomOf="@id/done_check" />

            <ImageView
                android:id="@+id/vector_image"
                android:layout_width="80dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_add_black" />

            <CheckBox
                android:id="@+id/done_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>